Geometry nodes boolean intersect sometimes not working #87078

Closed
opened 2021-03-31 10:56:37 +02:00 by Nicolas Lelong · 13 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Quadro RTX 3000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.69

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-29 22:00, hash: 91c44fe885
Worked: ?

Short description of error
Boolean intersect applied using geometry nodes sometimes gives wrong result, depending on the instanced objects positions.
When not working, it lets appear the volume used to insect the generated geometry.

Exact steps for others to reproduce the error

  1. Open the attached geomnode-boolean-intersection-bug.blend file
  2. The viewport should show a correct result : scattered Suzann models, cut by a volume
  3. In the Geometry Nodes Editor
    • Change the seed value in Point Distribute from 24 to 25 (for example)
    • The viewport shows the volume used for the boolean intersect node

A screen capture (animated GIF) : geomnode-boolean-intersection-bug.gif

geomnode-boolean-intersection-bug.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Quadro RTX 3000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.69 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-29 22:00, hash: `91c44fe885` Worked: ? **Short description of error** Boolean intersect applied using geometry nodes sometimes gives wrong result, depending on the instanced objects positions. When not working, it lets appear the volume used to insect the generated geometry. **Exact steps for others to reproduce the error** 1. Open the attached geomnode-boolean-intersection-bug.blend file 2. The viewport should show a correct result : scattered Suzann models, cut by a volume 3. In the Geometry Nodes Editor * Change the *seed* value in *Point Distribute* from 24 to 25 (for example) * The viewport shows the volume used for the boolean intersect node A screen capture (animated GIF) : ![geomnode-boolean-intersection-bug.gif](https://archive.blender.org/developer/F9915567/geomnode-boolean-intersection-bug.gif) [geomnode-boolean-intersection-bug.blend](https://archive.blender.org/developer/F9915566/geomnode-boolean-intersection-bug.blend)
Author

Added subscriber: @rotoglup

Added subscriber: @rotoglup
Author

PS. I took care to apply to Boolean node to each invidual scattered geometry, as it is manifold and non-intersecting, not to the joined global geometry.

PS. I took care to apply to Boolean node to each invidual scattered geometry, as it is manifold and non-intersecting, not to the joined global geometry.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @dfelinto

Added subscriber: @dfelinto

I tried applying the mesh (tip: it needs a node like boolean to convert it to mesh) and to use the boolean modifier outside and it works. So the issue seems to be related to geometry nodes.

I tried applying the mesh (tip: it needs a node like boolean to convert it to mesh) and to use the boolean modifier outside and it works. So the issue seems to be related to geometry nodes.
Member

Added subscriber: @lone_noel

Added subscriber: @lone_noel
Member

Even after applying the mesh, the boolean modifier still fails for me (Though it does indeed look a bit different from the result on the node tree and depends on which object has the modifier):

Modifier on Suzanne heads Modifier on Cutter
Boolean-modifier-failing-suzanne.png Boolean-modifier-failing-cutter.png

In case of the modifier, this just seems like the known issue with the exact boolean algorithm relying on the mesh being manifold (which Suzanne isn't).
Ticking the new "Hole Tolerant" option in the modifier (6f63417b50) fixes it in both cases for the applied mesh.

I also wasn't able to reproduce this problem with Geometry Nodes when using a manifold mesh (e.g. Ico Sphere) for instancing instead of Suzanne. So i assume that this is what's going on here, as well.

Even after applying the mesh, the boolean modifier still fails for me (Though it does indeed look a bit different from the result on the node tree and depends on which object has the modifier): |Modifier on Suzanne heads|Modifier on Cutter| | -- | -- | |![Boolean-modifier-failing-suzanne.png](https://archive.blender.org/developer/F9915649/Boolean-modifier-failing-suzanne.png)|![Boolean-modifier-failing-cutter.png](https://archive.blender.org/developer/F9915651/Boolean-modifier-failing-cutter.png)| In case of the modifier, this just seems like the known issue with the exact boolean algorithm relying on the mesh being manifold (which Suzanne isn't). Ticking the new "Hole Tolerant" option in the modifier (6f63417b50) fixes it in both cases for the applied mesh. I also wasn't able to reproduce this problem with Geometry Nodes when using a manifold mesh (e.g. Ico Sphere) for instancing instead of Suzanne. So i assume that this is what's going on here, as well.
Author

mesh being manifold (which Suzanne isn't).

Oh I thought it was, sorry for that.

Is there a manifold checker available in Blender ?

> mesh being manifold (which Suzanne isn't). Oh I thought it was, sorry for that. Is there a manifold checker available in Blender ?
Hans Goudey self-assigned this 2021-03-31 16:05:28 +02:00
Author

mesh being manifold (which Suzanne isn't).

FWIW, I've just tested after quickly fixing the suzanne model to make it manifold (by removing eyeballs and filling the remaining boundary loops) :

  • the Intersect boolean operation seems to work fine
  • the evaluation time is noticeably longer (was about 1 sec, now 5-6 sec)
> mesh being manifold (which Suzanne isn't). FWIW, I've just tested after quickly fixing the suzanne model to make it manifold (by removing eyeballs and filling the remaining boundary loops) : - the Intersect boolean operation seems to work fine - the evaluation time is noticeably longer (was about 1 sec, now 5-6 sec)

@rotoglup can you share the .blend?

@rotoglup can you share the .blend?
Author
@dfelinto Of course, here it is : [geomnode-boolean-intersection-bug (manifold suzanne).blend](https://archive.blender.org/developer/F9916869/geomnode-boolean-intersection-bug__manifold_suzanne_.blend)

This issue was referenced by e8573a59f6

This issue was referenced by e8573a59f66281f1d590e3c8b1888cfc7935b1cf
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87078
No description provided.